<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/PlayerTurn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/player1" />

    <view
        android:id="@+id/boardView"
        class="edu.msu.moranti1.project1.GameView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button

            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="48dp"
            android:onClick="onDone"
            android:text="@string/done_button" />

        <Button
            android:id="@+id/UndoButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:minHeight="48dp"
            android:onClick="onUndo"
            android:text="@string/undo_button"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/SurrenderButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="48dp"
            android:onClick="onSurrender"
            android:text="@string/surrender_button" />


    </LinearLayout>

</LinearLayout>